--- a/abccompany/src/app/login/login.component.html
+++ b/abccompany/src/app/login/login.component.html
@@ -13,7 +13,9 @@
       <input type="text" placeholder="Enter Username" name="uname" required>
 
       <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <input type="password" placeholder="Enter Password" name="psw" id="password" required>
+      <!-- An element to toggle between password visibility -->
+<input type="checkbox" (click)="myFunction()">Show Password
         
       <button type="submit">Login</button>
       <label>
